# ros2_gazebo_tugbot_navigate

./: .envrc  .gitignore  README.md
.hermes/plans/: 2026-05-22_235152-tugbot-maze-exploration-20260522.md
ros2_ws_tugbot_20260419/: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
ros2_ws_tugbot_20260419/artifacts/: cold_start_search_trace.json  cold_start_search_trace.py  repeat_cold_start_attempt_1.json  repeat_cold_start_attempt_2.json  repeat_cold_start_attempt_3.json  repeat_cold_start_attempt_4.json  repeat_cold_start_search_summary.json  repeat_cold_start_search_trace.py
ros2_ws_tugbot_20260419/src/tugbot_bringup/: package.xml  setup.cfg  setup.py
ros2_ws_tugbot_20260419/src/tugbot_bringup/config/: perception_debug.rviz
ros2_ws_tugbot_20260419/src/tugbot_bringup/launch/: full_system.launch.py  full_system_rviz_zeroerr_outer.launch.py  full_system_zeroerr_outer.launch.py  perception_debug.launch.py  perception_debug_zeroerr_outer.launch.py  sim_minimal.launch.py
ros2_ws_tugbot_20260419/src/tugbot_control/: package.xml  setup.cfg  setup.py
ros2_ws_tugbot_20260419/src/tugbot_control/config/: control.yaml
ros2_ws_tugbot_20260419/src/tugbot_control/tugbot_control/: lane_controller_node.py
ros2_ws_tugbot_20260419/tests/: test_architecture_contracts.py  test_lane_logic.py  test_temporal_debug.py  test_workspace_layout.py
ros2_ws_tugbot_nav_20260513/: README.md
ros2_ws_tugbot_nav_20260513/install/: local_setup.sh  setup.bash  setup.sh  setup.zsh
ros2_ws_tugbot_nav_20260513/log/: latest_build  latest_test  latest_test-result
ros2_ws_tugbot_nav_20260513/src/tugbot_bringup/: package.xml
ros2_ws_tugbot_nav_20260513/src/tugbot_bringup/test/: test_contract.py
ros2_ws_tugbot_nav_20260513/src/tugbot_navigation/: CMakeLists.txt
ros2_ws_tugbot_nav_20260513/src/tugbot_navigation/maps/: map_1725111373.pgm
ros2_ws_tugbot_nav_20260514/: README.md
ros2_ws_tugbot_nav_20260514/install/: local_setup.sh  setup.ps1  setup.sh
ros2_ws_tugbot_nav_20260514/log/: latest_build  latest_test  latest_test-result
ros2_ws_tugbot_nav_20260522/: README.md
ros2_ws_tugbot_nav_20260522/doc/: ACTIVE_MAZE_WORLD.md
ros2_ws_tugbot_nav_20260522/tools/: aggregate_phase26b_variance.py  align_phase33b_entrance_exit_markers.py  analyze_failure_windows.py  analyze_goal_controller_dynamics.py  analyze_phase107_preflight_raw_capture_discrepancy_diagnosis.py  analyze_phase113_preflight_internal_sampling_discrepancy.py  analyze_phase114_preflight_sim_time_alignment_fix.py  analyze_phase122_post_ingress_handoff_dry_start.py  analyze_phase124_first_exploration_goal_dispatch_smoke.py  analyze_phase125_first_exploration_goal_execution_result_smoke.py  analyze_phase134_bounded_corridor_alignment_staging_smoke.py  analyze_phase136_bounded_second_step_explore_after_staging_smoke.py  analyze_phase138_second_step_contract_serialization_static.py  analyze_phase139_instrumented_second_step_contract_runtime_verification.py  analyze_phase141_staging_gate_variability_artifact_source.py  analyze_phase143_staging_gate_artifact_completeness.py  analyze_phase26h_route_history_audit.py  analyze_phase26j_forward_shift_artifact_join.py  analyze_phase26k_spatial_local_cost_alignment.py  analyze_phase26l_runtime_spatial_contract.py  analyze_phase26m_timing_windows.py  analyze_phase26u_optimal_path_local_cost_join.py  analyze_phase26v_sampled_path_local_cost_join.py  analyze_phase26x_selected_control_debug.py  analyze_phase27_alt_fallback_runtime.py  analyze_phase27_alt_r3_decision_path_coverage.py  analyze_phase38_initial_local_topology.py  analyze_phase43_initial_topology_sampling_diagnostics.py  analyze_phase51_map_sufficiency_gate_discrepancy.py  analyze_phase52_startup_map_boundary_warmup.py  analyze_phase53_entrance_ingress_waypoint.py  analyze_phase55_ingress_then_maze_explorer_gated_startup_smoke.py  analyze_phase57_first_dispatch_navigation_timeout_diagnostics.py  analyze_phase58_post_ingress_candidate_formation_stability_replay.py  analyze_phase59_post_ingress_topology_consistency_guard.py  analyze_phase60_single_open_direction_dead_end_policy_review.py  analyze_phase61_post_ingress_single_open_candidate_exception.py  analyze_phase62_first_dispatch_local_cost_traversability_diagnostics.py  analyze_phase63_first_dispatch_target_safety_projection_static_replay.py  analyze_phase64_corridor_width_robot_footprint_feasibility_decision.py  (+86 more)
ros2_ws_tugbot_nav_20260614/: README.md  README_TREMAUX.md
ros2_ws_tugbot_nav_20260614/tools/: batch_diagnose_floodfill.sh  replay_collision_oracle.py  run_flood_fill_maze.sh
ros2_ws_tugbot_nav_20260705/: README.md
ros2_ws_tugbot_nav_20260705/src/tugbot_maze/: package.xml  setup.cfg
ros2_ws_tugbot_nav_20260705/src/tugbot_maze/config/: maze_20260528_scaled_instance.yaml
ros2_ws_tugbot_nav_20260705/src/tugbot_maze/test/: test_flood_fill_solver_smoke.py  test_flood_fill_viz.py  test_grid_utils.py  test_gz_trail.py  test_maze_sim.py  test_online_scan_match_localizer.py  test_online_slam_sim.py  test_pose_tracking.py
ros2_ws_tugbot_nav_20260705/src/tugbot_maze/tugbot_maze/: corridor_navigator.py  flood_fill_solver.py  flood_fill_viz.py  maze_sim.py  online_scan_match_localizer.py  pose_tracking.py
ros2_ws_tugbot_nav_20260705/tools/: gz_trail.py  run_flood_fill_maze.sh  run_solver_maze.sh  run_solver_reliability.sh  run_wall_follower_maze.sh
ros2_ws_tugbot_nav_20260712/: README.md
ros2_ws_tugbot_nav_20260716/: README.md
ros2_ws_tugbot_nav_20260717/: README.md
ros2_ws_tugbot_nav_20260719/: README.md
ros2_ws_tugbot_nav_20260719/src/tugbot_bringup/: CMakeLists.txt
ros2_ws_tugbot_nav_20260721/: README.md
ros2_ws_tugbot_nav_20260721/src/tugbot_exploration/: package.xml
ros2_ws_tugbot_nav_20260722/: README.md
ros2_ws_tugbot_nav_20260725/src/tugbot_gazebo/: package.xml
ros2_ws_tugbot_nav_20260725/src/tugbot_gazebo/config/: tugbot_bridge.yaml
ros2_ws_tugbot_nav_20260725/src/tugbot_gazebo/launch/: tugbot_gazebo.launch.py
ros2_ws_tugbot_nav_20260726/: README.md
(+1126 files in other folders)
