<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tugbot_bringup</name>
  <version>0.1.0</version>
  <description>Layered launch entry points for minimal tugbot visual lane simulation.</description>
  <maintainer email="hyh@example.com">hyh</maintainer>
  <license>MIT</license>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>ros_gz_image</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>tugbot_description</exec_depend>
  <exec_depend>tugbot_gazebo</exec_depend>
  <exec_depend>tugbot_perception</exec_depend>
  <exec_depend>tugbot_control</exec_depend>

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
