<?xml version="1.0"?>
<package format="3">
  <name>tugbot_bringup</name>
  <version>0.1.0</version>
  <description>Top-level bringup launch files and RViz config for Tugbot navigation.</description>
  <maintainer email="housebigger@example.com">Housebigger</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <test_depend>ament_lint_auto</test_depend>
  <export><build_type>ament_cmake</build_type></export>
</package>
