<?xml version="1.0"?>
<package format="3">
  <name>tugbot_maze</name>
  <version>0.1.0</version>
  <description>Maze world metadata, exit monitoring, and autonomous maze-solving nodes for the Tugbot (reactive wall-following solver, plus Trémaux/frontier/DFS explorers and guided-corridor navigation).</description>
  <maintainer email="housebigger@example.com">Housebigger</maintainer>
  <license>MIT</license>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>
  <exec_depend>action_msgs</exec_depend>
  <exec_depend>lifecycle_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>python3-pytest</test_depend>
  <export><build_type>ament_python</build_type></export>
</package>
