<?xml version="1.0"?>
<package format="3">
  <name>tugbot_exploration</name>
  <version>0.1.0</version>
  <description>Frontier exploration node for Tugbot SLAM + Nav2 mapping.</description>
  <maintainer email="housebigger@example.com">Housebigger</maintainer>
  <license>MIT</license>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <test_depend>ament_lint_auto</test_depend>
  <export><build_type>ament_python</build_type></export>
</package>
